test-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template to Create an EC2 instance in a VPC
   
Parameters:

  ImageId:
    Type: String
    Description: 'Windows AMI for ap-south-1 Region'
    Default: 'ami-0bc0b2db7d94c33f9'
  VpcId:
    Type: String
    Description: VPC id
    Default: vpc-0beb6ab9306dc6a09
  SubnetId:
    Type: String
    Description: Subnet in which to launch an EC2
    Default: subnet-08cc31842e79717d3
  AvailabilityZone:
    Type: String
    Description: Availability Zone into which instance will launch
    Default: ap-south-1b
  InstanceType:
    Type: String
    Description: Choosing  t2 micro because it is free
    Default: t2.micro
  KeyName:
    Description: Keypair to login to the instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: MyEC2Instance


Resources:
  DemoInstance:
    Type: 'AWS::EC2::Instance'
    Properties: 
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      AvailabilityZone: !Ref AvailabilityZone
      KeyName: !Ref KeyName
      SecurityGroupIds: 
        - !Ref DemoSecurityGroup
      SubnetId: !Ref SubnetId
      IamInstanceProfile: !Ref DemoInstanceProfile
      UserData:
        Fn::Base64: 
          !Sub |
            <powershell>
            Enable-PSRemoting -Confirm:$false
            winrm quickconfig
            netsh advfirewall firewall add rule name="WinRM-HTTP" dir=in localport=5985 protocol=TCP action=allow
            netsh advfirewall firewall add rule name="WinRM-HTTPS" dir=in localport=5986 protocol=TCP action=allow
            winrm set winrm/config/client/auth '@{Basic="true"}'
            winrm set winrm/config/service/auth '@{Basic="true"}'
            winrm set winrm/config/service '@{AllowUnencrypted="true"}'
            winrm set winrm/config/winrs '@{MaxMemoryPerShellMB="1024"}'
            Set-ExecutionPolicy AllSigned
            Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1')) 
            choco upgrade chocolatey
            </powershell>

  DemoSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: SG to allow SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '5985'
          ToPort: '5985'
          CidrIp: '0.0.0.0/0'    
        - IpProtocol: tcp
          FromPort: '5986'
          ToPort: '5986'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '3389'
          ToPort: '3389'
          CidrIp: '0.0.0.0/0'                        
      Tags:
        - Key: Name
          Value: SSH-SG

  DemoInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties: 
      InstanceProfileName: newprofile
      Path: /
      Roles: 
       - !Ref DemoEc2InstanceRole 

  NewPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: newpolicyFullAccess
      PolicyDocument:
        Statement:
          - Effect: Allow
            Action: '*'
            Resource: '*'
      Roles:
        - !Ref DemoEc2InstanceRole

  DemoEc2InstanceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: NewRole
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /  

Outputs:
  DemoInstanceId:
    Description: Instance Id 
    Value: !Ref DemoInstance
